--- a/valuespit/valuespit.vcproj
+++ b/valuespit/valuespit.vcproj
@@ -43,7 +43,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
+				DebugInformationFormat="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -56,11 +56,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="msvcrt_win2000.obj"
 				OutputFile="$(OutDir)\valuespit_th07+.exe"
 				LinkIncremental="2"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
-				GenerateDebugInformation="true"
+				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -116,7 +117,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
+				DebugInformationFormat="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -133,7 +134,7 @@
 				LinkIncremental="2"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
-				GenerateDebugInformation="true"
+				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -189,7 +190,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
+				DebugInformationFormat="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -206,7 +207,7 @@
 				LinkIncremental="2"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
-				GenerateDebugInformation="true"
+				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -262,7 +263,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
+				DebugInformationFormat="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -279,7 +280,7 @@
 				LinkIncremental="2"
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
-				GenerateDebugInformation="true"
+				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -319,10 +320,26 @@
 			<File
 				RelativePath=".\common.c"
 				>
+				<FileConfiguration
+					Name="TH07+|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\valuespit_tasofro.c"
 				>
+				<FileConfiguration
+					Name="TH07+|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 				<FileConfiguration
 					Name="TH06|Win32"
 					ExcludedFromBuild="true"
@@ -343,6 +360,14 @@
 			<File
 				RelativePath=".\valuespit_th06.c"
 				>
+				<FileConfiguration
+					Name="TH07+|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 				<FileConfiguration
 					Name="Tasofro|Win32"
 					ExcludedFromBuild="true"
